# atomic_study_ninja

./: .gitignore  Makefile  README.md  linear_algebra.ipynb  pyproject.toml  requirements.txt  study_fields.dot  study_fields.yaml  topics.html  topics.md  topics.mmd
.devcontainer/: Dockerfile  devcontainer.json
schema/: study_material.schema.yaml
src/atomic_study_ninja/: main.py  model.py
src/atomic_study_ninja/templates/: study_info_graphic_graphviz.jinja2.dot
